# QueryGuard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/queryguard/: __init__.py  config.py  config.pyi  dialects.py  exceptions.py  guard.py  result.py
src/queryguard/engine/: __init__.py  extractor.py  parser.py  rewriter.py  suggester.py  types.py  validator.py
src/queryguard/utils/: similarity.py
tests/: test.py  test_queryguard.py
