[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "queryguard"
version = "0.1.0"
description = "SQL validation and policy enforcement for NL2SQL pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Wajee" }
]
keywords = [
    "sql",
    "nl2sql",
    "sql-validation",
    "sql-safety",
    "query-guard",
    "database",
    "llm",
    "ai",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "sqlglot>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/wajee/queryguard"
Repository = "https://github.com/wajee/queryguard"
Issues = "https://github.com/wajee/queryguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/queryguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
