[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "queryguard-sql"
version = "0.1.5"
description = "SQL validation and policy enforcement for NL2SQL pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "WajeehAlamoudi", email = "wajeehalamoudi@outlook.com" }
]
keywords = [
    "sql",
    "nl2sql",
    "sql-validation",
    "sql-safety",
    "query-guard",
    "database",
    "llm",
    "ai",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "sqlglot>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/WajeehAlamoudi/QueryGuard"
Repository = "https://github.com/WajeehAlamoudi/QueryGuard"
Issues = "https://github.com/WajeehAlamoudi/QueryGuard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/queryguard"]
artifacts = [
    "src/queryguard/py.typed",
    "src/queryguard/config.pyi",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src/queryguard",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
